--- a/src/cinema/contact.fxml
+++ b/src/cinema/contact.fxml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
-
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="427.0" prefWidth="604.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
@@ -30,5 +30,6 @@
       <Label layoutX="90.0" layoutY="290.0" text="then others page choose showtime, theatres type,screen display type." textFill="#da0f0f" />
       <Label layoutX="89.0" layoutY="314.0" text="How to run projectrun jar file in command line interface with this instruction " textFill="#da0f0f" />
       <Label layoutX="89.0" layoutY="339.0" text="java -jar and drag .jar file in then click enter." textFill="#da0f0f" />
+      <Button layoutX="221.0" layoutY="375.0" mnemonicParsing="false" style="-fx-background-color: black; -fx-border-color: red;" text="Home" textFill="#e10808" />
    </children>
 </Pane>
