--- a/src/cinema/movie1.fxml
+++ b/src/cinema/movie1.fxml
@@ -176,5 +176,7 @@
       <Button layoutX="368.0" layoutY="538.0" mnemonicParsing="false" style="-fx-background-color: black; -fx-border-color: red;" text="15:30" textFill="#f80a0a" />
       <Button layoutX="429.0" layoutY="538.0" mnemonicParsing="false" style="-fx-background-color: black; -fx-border-color: red;" text="19:00" textFill="#f80a0a" />
       <Button layoutX="616.0" layoutY="60.0" mnemonicParsing="false" style="-fx-background-color: red;" text="Detail" textFill="#fffbfb" />
+      <Button layoutX="329.0" layoutY="590.0" mnemonicParsing="false" style="-fx-background-color: red;" text="Back" textFill="#fffbfb" />
+      <Button layoutX="399.0" layoutY="590.0" mnemonicParsing="false" style="-fx-background-color: red;" text="Home" textFill="#fffbfb" />
    </children>
 </Pane>
