--- a/src/cinema/movie3.fxml
+++ b/src/cinema/movie3.fxml
@@ -172,5 +172,7 @@
         <Button layoutX="306.0" layoutY="538.0" mnemonicParsing="false" style="-fx-background-color: gold; -fx-border-color: red;" text="15:20" textFill="#ff0505" />
         <Button layoutX="368.0" layoutY="538.0" mnemonicParsing="false" style="-fx-background-color: black; -fx-border-color: red;" text="20:40" textFill="#f80a0a" />
         <Button layoutX="616.0" layoutY="60.0" mnemonicParsing="false" style="-fx-background-color: red;" text="Detail" textFill="#fffbfb" />
+      <Button layoutX="360.0" layoutY="595.0" mnemonicParsing="false" style="-fx-background-color: red;" text="Back" textFill="#fffbfb" />
+      <Button layoutX="429.0" layoutY="595.0" mnemonicParsing="false" style="-fx-background-color: red;" text="Home" textFill="#fffbfb" />
     </children>
 </Pane>
