--- a/src/cinema/threatre3.fxml
+++ b/src/cinema/threatre3.fxml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-        <?import javafx.scene.control.Label?>
-        <?import javafx.scene.effect.DropShadow?>
-        <?import javafx.scene.effect.Reflection?>
-        <?import javafx.scene.image.Image?>
-        <?import javafx.scene.image.ImageView?>
-        <?import javafx.scene.layout.Pane?>
-        <?import javafx.scene.text.Font?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.effect.Reflection?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
 <children>
@@ -294,5 +295,7 @@
     <Label layoutX="242.0" layoutY="263.0" text="3" textFill="#d9e809" />
     <Label layoutX="181.0" layoutY="263.0" text="2" textFill="#d9e809" />
     <Label layoutX="120.0" layoutY="263.0" text="1" textFill="#d9e809" />
+      <Button layoutX="14.0" layoutY="307.0" mnemonicParsing="false" style="-fx-background-color: white;" text="Back" textFill="#eb0b0b" />
+      <Button layoutX="540.0" layoutY="308.0" mnemonicParsing="false" text="Home" textFill="#f50a0a" />
 </children>
 </Pane>
