--- a/src/cinema/threatre4.fxml
+++ b/src/cinema/threatre4.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.effect.Reflection?>
@@ -294,5 +295,7 @@
         <Label layoutX="242.0" layoutY="263.0" text="3" textFill="#d9e809" />
         <Label layoutX="181.0" layoutY="263.0" text="2" textFill="#d9e809" />
         <Label layoutX="120.0" layoutY="263.0" text="1" textFill="#d9e809" />
+      <Button layoutX="14.0" layoutY="302.0" mnemonicParsing="false" text="Back" textFill="#fc0505" />
+      <Button layoutX="534.0" layoutY="302.0" mnemonicParsing="false" text="Home" textFill="#eb0707" />
     </children>
 </Pane>
