--- a/src/cinema/movie2.fxml
+++ b/src/cinema/movie2.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="634.0" prefWidth="700.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="634.0" prefWidth="700.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinema.Movie2Controller">
     <children>
         <Line endX="591.0" layoutX="101.0" layoutY="44.0" startX="-101.0" stroke="#f50303" />
         <Line endX="92.5" endY="-23.414215087890625" layoutX="120.0" layoutY="43.0" startX="64.5" startY="-43.0" stroke="#f20808" />
@@ -96,9 +96,9 @@
                 <Font size="14.0" />
             </font>
         </Label>
-        <Button layoutX="312.0" layoutY="179.0" mnemonicParsing="false" style="-fx-background-color: gold; -fx-border-color: red;" text="11:30" textFill="#ff0505" />
-        <Button layoutX="368.0" layoutY="179.0" mnemonicParsing="false" style="-fx-background-color: black; -fx-border-color: red;" text="14:00" textFill="#f80a0a" />
-        <Button layoutX="429.0" layoutY="179.0" mnemonicParsing="false" style="-fx-background-color: black; -fx-border-color: red;" text="16:30" textFill="#f50707" />
+        <Button fx:id="movie2threatre3Time1" layoutX="312.0" layoutY="179.0" mnemonicParsing="false" onAction="#goThreatre3FromMovie1Time1" onMouseClicked="#goThreatre3FromMovie1Time1" style="-fx-background-color: gold; -fx-border-color: red;" text="11:30" textFill="#ff0505" />
+        <Button fx:id="movie2threatre3Time2" layoutX="368.0" layoutY="179.0" mnemonicParsing="false" onAction="#goThreatre3FromMovie1Time2" onMouseClicked="#goThreatre3FromMovie1Time2" style="-fx-background-color: black; -fx-border-color: red;" text="14:00" textFill="#f80a0a" />
+        <Button fx:id="movie2threatre3Time3" layoutX="429.0" layoutY="179.0" mnemonicParsing="false" onAction="#goThreatre3FromMovie1Time3" onMouseClicked="#goThreatre3FromMovie1Time3" style="-fx-background-color: black; -fx-border-color: red;" text="16:30" textFill="#f50707" />
         <ImageView fitHeight="21.0" fitWidth="37.0" layoutX="301.0" layoutY="146.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/rating_2.png" />
@@ -174,19 +174,18 @@
                 <Image url="@../images/Screen%20Shot%202562-09-06%20at%2015.46.44.png" />
             </image>
         </ImageView>
-        <Button layoutX="306.0" layoutY="361.0" mnemonicParsing="false" style="-fx-background-color: gold; -fx-border-color: red;" text="12:30" textFill="#ff0505" />
-        <Button layoutX="306.0" layoutY="538.0" mnemonicParsing="false" style="-fx-background-color: gold; -fx-border-color: red;" text="15:30" textFill="#ff0505" />
-        <Button layoutX="368.0" layoutY="361.0" mnemonicParsing="false" style="-fx-background-color: black; -fx-border-color: red;" text="15:30" textFill="#f80a0a" />
-        <Button layoutX="429.0" layoutY="361.0" mnemonicParsing="false" style="-fx-background-color: black; -fx-border-color: red;" text="18:00" textFill="#f80a0a" />
-        <Button layoutX="368.0" layoutY="538.0" mnemonicParsing="false" style="-fx-background-color: black; -fx-border-color: red;" text="20:30" textFill="#f80a0a" />
-        <Button layoutX="487.0" layoutY="179.0" mnemonicParsing="false" style="-fx-background-color: black; -fx-border-color: red;" text="19:00" textFill="#f80a0a" />
-        <Button layoutX="616.0" layoutY="60.0" mnemonicParsing="false" style="-fx-background-color: red;" text="Detail" textFill="#fffbfb" />
+        <Button fx:id="movie2threatre2Time1" layoutX="306.0" layoutY="361.0" mnemonicParsing="false" onAction="#goThreatre2FromMovie2Time1" onMouseClicked="#goThreatre2FromMovie2Time1" style="-fx-background-color: gold; -fx-border-color: red;" text="12:30" textFill="#ff0505" />
+        <Button fx:id="movie2threatre4Time1" layoutX="306.0" layoutY="538.0" mnemonicParsing="false" onAction="#goThreatre4FromMovie2Time1" onMouseClicked="#goThreatre4FromMovie2Time1" style="-fx-background-color: gold; -fx-border-color: red;" text="15:30" textFill="#ff0505" />
+        <Button fx:id="movie2threatre2Time2" layoutX="368.0" layoutY="361.0" mnemonicParsing="false" onAction="#goThreatre2FromMovie2Time2" onMouseClicked="#goThreatre2FromMovie2Time2" style="-fx-background-color: black; -fx-border-color: red;" text="15:30" textFill="#f80a0a" />
+        <Button fx:id="movie2threatre2Time3" layoutX="429.0" layoutY="361.0" mnemonicParsing="false" onAction="#goThreatre2FromMovie2Time3" onMouseClicked="#goThreatre2FromMovie2Time3" style="-fx-background-color: black; -fx-border-color: red;" text="18:00" textFill="#f80a0a" />
+        <Button fx:id="movie2threatre4Time2" layoutX="368.0" layoutY="538.0" mnemonicParsing="false" onAction="#goThreatre4FromMovie2Time2" onMouseClicked="#goThreatre4FromMovie2Time2" style="-fx-background-color: black; -fx-border-color: red;" text="20:30" textFill="#f80a0a" />
+        <Button fx:id="movie2threatre3Time4" layoutX="487.0" layoutY="179.0" mnemonicParsing="false" onAction="#goThreatre3FromMovie1Time3" onMouseClicked="#goThreatre3FromMovie1Time3" style="-fx-background-color: black; -fx-border-color: red;" text="19:00" textFill="#f80a0a" />
+        <Button fx:id="detailmovie2Btn" layoutX="616.0" layoutY="60.0" mnemonicParsing="false" onAction="#goMovieDetail1FromMovie2" onMouseClicked="#goMovieDetail1FromMovie2" style="-fx-background-color: red;" text="Detail" textFill="#fffbfb" />
       <Label layoutX="306.0" layoutY="472.0" text="ฤดูฝัน ฉันมีเธอ แอนิเมชัน , แฟนตาซี , โรแมนติก  111 นาที" textFill="#fcfafa">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Button layoutX="404.0" layoutY="595.0" mnemonicParsing="false" style="-fx-background-color: red;" text="Home" textFill="#fffbfb" />
-      <Button layoutX="329.0" layoutY="595.0" mnemonicParsing="false" style="-fx-background-color: red;" text="Back" textFill="#fffbfb" />
+      <Button fx:id="movie2homeBtn" layoutX="404.0" layoutY="595.0" mnemonicParsing="false" onAction="#goHomeFromMovie1" onMouseClicked="#goHomeFromMovie1" style="-fx-background-color: red;" text="Home" textFill="#fffbfb" />
     </children>
 </Pane>
