--- a/src/cinema/movie3.fxml
+++ b/src/cinema/movie3.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="634.0" prefWidth="700.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="634.0" prefWidth="700.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinema.Movie3Controller">
     <children>
         <Line endX="591.0" layoutX="101.0" layoutY="44.0" startX="-101.0" stroke="#f50303" />
         <Line endX="92.5" endY="-23.414215087890625" layoutX="120.0" layoutY="43.0" startX="64.5" startY="-43.0" stroke="#f20808" />
@@ -91,8 +91,8 @@
                 <Font size="14.0" />
             </font>
         </Label>
-        <Button layoutX="312.0" layoutY="179.0" mnemonicParsing="false" style="-fx-background-color: gold; -fx-border-color: red;" text="11:00" textFill="#ff0505" />
-        <Button layoutX="368.0" layoutY="179.0" mnemonicParsing="false" style="-fx-background-color: black; -fx-border-color: red;" text="16:20" textFill="#f80a0a" />
+        <Button fx:id="movie3threatre1time1" layoutX="312.0" layoutY="179.0" mnemonicParsing="false" onAction="#goThreatre1FromMovie1Time1" onMouseClicked="#goThreatre1FromMovie1Time1" style="-fx-background-color: gold; -fx-border-color: red;" text="11:00" textFill="#ff0505" />
+        <Button fx:id="movie3threatre1time2" layoutX="368.0" layoutY="179.0" mnemonicParsing="false" onAction="#goThreatre1FromMovie1Time2" onMouseClicked="#goThreatre1FromMovie1Time2" style="-fx-background-color: black; -fx-border-color: red;" text="16:20" textFill="#f80a0a" />
         <ImageView fitHeight="21.0" fitWidth="37.0" layoutX="301.0" layoutY="146.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/rating_3.png" />
@@ -168,11 +168,10 @@
                 <Image url="@../images/3(27).jpg" />
             </image>
         </ImageView>
-        <Button layoutX="306.0" layoutY="361.0" mnemonicParsing="false" style="-fx-background-color: gold; -fx-border-color: red;" text="14:00" textFill="#ff0505" />
-        <Button layoutX="306.0" layoutY="538.0" mnemonicParsing="false" style="-fx-background-color: gold; -fx-border-color: red;" text="15:20" textFill="#ff0505" />
-        <Button layoutX="368.0" layoutY="538.0" mnemonicParsing="false" style="-fx-background-color: black; -fx-border-color: red;" text="20:40" textFill="#f80a0a" />
-        <Button layoutX="616.0" layoutY="60.0" mnemonicParsing="false" style="-fx-background-color: red;" text="Detail" textFill="#fffbfb" />
-      <Button layoutX="360.0" layoutY="595.0" mnemonicParsing="false" style="-fx-background-color: red;" text="Back" textFill="#fffbfb" />
-      <Button layoutX="429.0" layoutY="595.0" mnemonicParsing="false" style="-fx-background-color: red;" text="Home" textFill="#fffbfb" />
+        <Button fx:id="movie3threatre2time1" layoutX="306.0" layoutY="361.0" mnemonicParsing="false" onAction="#goThreatre2FromMovie2Time1" onMouseClicked="#goThreatre2FromMovie2Time1" style="-fx-background-color: gold; -fx-border-color: red;" text="14:00" textFill="#ff0505" />
+        <Button fx:id="movie3threatre3time1" layoutX="306.0" layoutY="538.0" mnemonicParsing="false" onAction="#goThreatre3FromMovie1Time1" onMouseClicked="#goThreatre3FromMovie1Time1" style="-fx-background-color: gold; -fx-border-color: red;" text="15:20" textFill="#ff0505" />
+        <Button fx:id="movie3threatre3time2" layoutX="368.0" layoutY="538.0" mnemonicParsing="false" onAction="#goThreatre3FromMovie1Time2" onMouseClicked="#goThreatre3FromMovie1Time2" style="-fx-background-color: black; -fx-border-color: red;" text="20:40" textFill="#f80a0a" />
+        <Button fx:id="movie3detailBtn" layoutX="616.0" layoutY="60.0" mnemonicParsing="false" onAction="#goMovieDetail1FromMovie3" onMouseClicked="#goMovieDetail1FromMovie3" style="-fx-background-color: red;" text="Detail" textFill="#fffbfb" />
+      <Button fx:id="movie3homeBtn" layoutX="429.0" layoutY="595.0" mnemonicParsing="false" onAction="#goHomeFromMovie1" style="-fx-background-color: red;" text="Home" textFill="#fffbfb" />
     </children>
 </Pane>
