--- a/src/cinema/moviedetail1.fxml
+++ b/src/cinema/moviedetail1.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="665.0" prefWidth="600.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="665.0" prefWidth="600.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinema.MovieDetail1Controller">
    <children>
       <ImageView fitHeight="21.0" fitWidth="29.0" layoutX="418.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -69,7 +69,7 @@
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <Button layoutX="5.0" layoutY="92.0" mnemonicParsing="false" style="-fx-background-color: red;" text="Back" textFill="#fcf7f7" />
+      <Button fx:id="gobackmoviedetail1" layoutX="5.0" layoutY="92.0" mnemonicParsing="false" onAction="#goBackFromMovieDetail1" onMouseClicked="#goBackFromMovieDetail1" style="-fx-background-color: red;" text="Back" textFill="#fcf7f7" />
       <Label layoutX="100.0" layoutY="372.0" text="แอนเดรส มัสเชียต" textFill="#f8f5f5">
          <font>
             <Font size="14.0" />
@@ -97,6 +97,6 @@
       <Label layoutX="25.0" layoutY="573.0" text="ได้ตัวนักแสดงมากฝีมือมากมายมารับบทเป็น &quot;กลุ่มขี้แพ้&quot; ในวัยผู้ใหญ่ " textFill="#f5efef" />
       <Label layoutX="25.0" layoutY="596.0" text="นำโดยผู้เข้าชิงรางวัลออสการ์ เจสสิก้า แชสเทน (ภาพยนตร์ Zero Dark Thirty, Mama) รับบท เบเวอร์ลี่, เจมส์ แม็คอะวอย  " textFill="#f8f3f3" />
       <Label layoutX="28.0" layoutY="620.0" text=" รวมถึงนักแสดงตัวหลักที่ขาดไม่ได้เลยก็คือ บิล ซาร์สการ์ด ที่กลับมาทวงตำแหน่งตัวตลกปีศาจในตำนาน เพนนี่ไวซ์" textFill="#eeecec" />
-      <Button layoutX="552.0" layoutY="92.0" mnemonicParsing="false" style="-fx-background-color: red;" text="Home" textFill="#fcf7f7" />
+      <Button fx:id="gohomemoviedetail1" layoutX="552.0" layoutY="92.0" mnemonicParsing="false" onAction="#goHomeFromMovieDetail1" onMouseClicked="#goHomeFromMovieDetail1" style="-fx-background-color: red;" text="Home" textFill="#fcf7f7" />
    </children>
 </Pane>
