--- a/src/cinema/moviedetail2.fxml
+++ b/src/cinema/moviedetail2.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="665.0" prefWidth="600.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="665.0" prefWidth="600.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinema.MovieDetail2Controller">
     <children>
         <ImageView fitHeight="21.0" fitWidth="29.0" layoutX="418.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
             <image>
@@ -69,7 +69,7 @@
                 <Font name="System Bold" size="14.0" />
             </font>
         </Label>
-        <Button layoutX="5.0" layoutY="92.0" mnemonicParsing="false" style="-fx-background-color: red;" text="Back" textFill="#fcf7f7" />
+        <Button fx:id="moviedetail2BackBtn" layoutX="5.0" layoutY="92.0" mnemonicParsing="false" onAction="#goBackFromMovieDetail2" onMouseClicked="#goBackFromMovieDetail2" style="-fx-background-color: red;" text="Back" textFill="#fcf7f7" />
         <Label layoutX="100.0" layoutY="372.0" text="มาโกโตะ ชิงไก" textFill="#f8f5f5">
             <font>
                 <Font size="14.0" />
@@ -97,6 +97,6 @@
         <Label layoutX="25.0" layoutY="573.0" text="เนื่องด้วยเพราะการทำงานเป็นนักเขียนในนิตยสารรวมสิ่งลึกลับ มันจึงทำให้เขาเริ่มสังเกตเห็นถึงสิ่งหนึ่งที่เกิดขึ้นบ่อยจนคนในเมือง" textFill="#f5efef" />
         <Label layoutX="25.0" layoutY="596.0" text="คิดว่ามันเป็นเรื่องปกติ และนั่นก็เป็นจุดเริ่มต้นที่ทำให้เขาได้พบกับ ฮินะ อามาโนะ" textFill="#f8f3f3" />
         <Label layoutX="28.0" layoutY="620.0" text="สาวน้อยปริศนาที่มีความสามารถในการควบคุมสภาพอากาศ และความลับที่จะเปลี่ยนโฉมหน้าของโลกใบนี้ไปตลอดกาล" textFill="#eeecec" />
-      <Button layoutX="549.0" layoutY="92.0" mnemonicParsing="false" style="-fx-background-color: red;" text="Home" textFill="#fcf7f7" />
+      <Button fx:id="moviedetail2HomeBtn" layoutX="549.0" layoutY="92.0" mnemonicParsing="false" onAction="#goHomeFromMovieDetail1" onMouseClicked="#goHomeFromMovieDetail1" style="-fx-background-color: red;" text="Home" textFill="#fcf7f7" />
     </children>
 </Pane>
