--- a/src/cinema/moviedetail3.fxml
+++ b/src/cinema/moviedetail3.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="665.0" prefWidth="600.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="665.0" prefWidth="600.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinema.MovieDetail3Controller">
     <children>
         <ImageView fitHeight="21.0" fitWidth="29.0" layoutX="418.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
             <image>
@@ -54,7 +54,7 @@
                 <Font name="System Bold" size="14.0" />
             </font>
         </Label>
-        <Button layoutX="5.0" layoutY="92.0" mnemonicParsing="false" style="-fx-background-color: red;" text="Back" textFill="#fcf7f7" />
+        <Button fx:id="movie3BackBtn" layoutX="5.0" layoutY="92.0" mnemonicParsing="false" onAction="#goBackFromMovieDetail3" onMouseClicked="#goBackFromMovieDetail3" style="-fx-background-color: red;" text="Back" textFill="#fcf7f7" />
         <Label layoutX="100.0" layoutY="372.0" text="ริค โรมัน วาฟ" textFill="#f8f5f5">
             <font>
                 <Font size="14.0" />
@@ -80,6 +80,6 @@
         <Label layoutX="25.0" layoutY="524.0" text="ถูกตั้งข้อหาพยายามสังหารประธานาธิบดีเสียเอง" textFill="#fcf6f6" />
         <Label layoutX="30.0" layoutY="548.0" text="ขาจึงหลบหนีจากการไล่ล่าของเจ้าหน้าที่พร้อมกับต้องตามล่าตัวการเพื่อล้างมลทินและ" textFill="#f8f5f5" />
         <Label layoutX="25.0" layoutY="573.0" text="ปกป้องประธานาธิบดีที่กำลังตกอยู่ในอันตรายจากทั้งฝ่ายรัฐบาลและผู้ก่อการร้ายระดับพระกาฬอีกครั้ง" textFill="#f5efef" />
-      <Button layoutX="543.0" layoutY="92.0" mnemonicParsing="false" style="-fx-background-color: red;" text="Home" textFill="#f2eeee" />
+      <Button fx:id="moviedetail3HomeBtn" layoutX="543.0" layoutY="92.0" mnemonicParsing="false" onAction="#goHomeFromMovieDetail1" onMouseClicked="#goHomeFromMovieDetail1" style="-fx-background-color: red;" text="Home" textFill="#f2eeee" />
     </children>
 </Pane>
